<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/customer_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">
            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:text="@string/name"
                android:textSize="40sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/birthdayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignBaseline="@+id/nameTextView"
                android:layout_marginEnd="5dp"
                android:text="@string/birthday"
                android:textSize="20sp"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
        <TextView
            android:id="@+id/telNoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/tel_no_listview"
            android:textSize="34sp"/>
    </LinearLayout>

</LinearLayout>